--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+.hero.is-medium .hero-body {
+  padding-bottom: 2.5rem;
+  padding-top: 2.5rem;
+}
+
 .App {
   text-align: center;
 }
@@ -30,6 +35,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.music-canvas {
+  padding: 3em;
 }
 
 .tags, .buttons {
