--- a/src/App.css
+++ b/src/App.css
@@ -5,24 +5,10 @@
 
 .App {
   text-align: center;
+  font-size: 1.3em;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
@@ -38,7 +24,14 @@
 }
 
 .music-canvas {
-  padding: 3em;
+  padding-top: 1em;
+  padding-left: 3em;
+  padding-bottom: 1em;
+  padding-right: 3em;
+}
+
+.heading {
+    font-size: 15px;
 }
 
 .tags, .buttons {
@@ -48,3 +41,7 @@
 .mt-1 {
   margin-top: 1em;
 }
+
+/* h1 {
+  background-color: teal;
+} */
