Adjusted styling and position of SVG elements. Fixed error in logic that would turn the note green on a null pitch. Adjusted script processor setting for better performance.

--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,19 @@
   justify-content: center;
 }
 
+.user-playing-note {
+  transition: all .15s;
+}
 .mt-1 {
   margin-top: 1em;
+}
+
+.title {
+  font-family: 'Sawarabi Mincho', sans-serif;
+}
+
+.button {
+  background-color: #EDC;
 }
 
 /* h1 {
