Updated title font.

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,9 @@
 }
 
 .title {
-  font-family: 'Sawarabi Mincho', sans-serif;
+  /* font-family: 'Sawarabi Mincho', sans-serif; */
+  font-family: 'Tenali Ramakrishna', sans-serif;
+  font-size: 3em;
 }
 
 .button {
