--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,8 @@
   transition: all .5s ease-in-out;
 }
 
-#prompted-note {
-  transition: all .8s ease-in-out;
+g, path {
+  transition: all .5s ease-in-out;
 }
 
 .heading {
