--- a/src/App.css
+++ b/src/App.css
@@ -8,21 +8,6 @@
   font-size: 1.3em;
 }
 
-
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .music-canvas {
   padding-top: 0em;
   padding-left: 3em;
@@ -34,8 +19,30 @@
   transition: all .5s ease-in-out;
 }
 
-g, path {
-  transition: all .5s ease-in-out;
+/* .user-feedback-svg {
+
+  animation-name: fade-in;
+  animation-duration: 1s;
+  animation-tim ing-function: ease-in-out;
+  animation-iteration-count: infinite;
+
+} */
+
+/* .smooth-move {
+ transition: all .3s ease-in-out
+} */
+
+/* @keyframes fade-in {
+  from {
+    opacity:0;
+  }
+  to {
+    opacity: 1;
+  }
+} */
+
+.prompted-svg {
+  transition: all .7s ease-in-out;
 }
 
 .heading {
