--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,6 @@
   border: 1px solid grey;
 }
 
-.bass-clef-and-staff {
-  transition: all .5s ease-in-out;
-}
-
 /* .user-feedback-svg {
 
   animation-name: fade-in;
@@ -72,21 +68,16 @@
 }
 
 .info-box p {
-  font-size: 1em;
+  font-size: .8em;
   text-align: left;
-  margin-bottom: 1em;
+  margin-bottom: .8em;
 }
 
 .info-box h2 {
-  font-size: 1.3em;
+  font-size: 1em;
   text-align: left;
-  margin-bottom: .5em;
-}
-
-#test {
-  background-color: #80cbb0;
-  font-size: 1.8em;
-  vertical-align: middle;
+  margin-bottom: .1em;
+  margin-top: 1.5em;
 }
 
 .fixed-height-div {
