--- a/src/App.css
+++ b/src/App.css
@@ -80,11 +80,20 @@
   margin-top: 1.5em;
 }
 
-.fixed-height-div {
+.fixed-height-div-1 {
   height: 1.5em;
+  vertical-align: middle;
+  color: #2d67df;
+}
+
+.fixed-height-div-3 {
+  height: 3em;
   vertical-align: middle;
 }
 
+.listening {
+  font-size: .5em;
+}
 
 h2 {
   font-size: 1.5em;
